--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,9 +1,10 @@
 @import './base.css';
+@import "tailwindcss";
 
 #app {
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: 0 auto;
-  padding: 2rem;
+  /*padding: 2rem;*/
   font-weight: normal;
 }
 
@@ -23,13 +24,13 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
+    /*display: flex;*/
     place-items: center;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    /*display: grid;*/
+    /*grid-template-columns: 1fr 1fr;*/
+    /*padding: 0 2rem;*/
   }
 }
